fix: spacing in publication for person list authors to use non breaking space

--- a/Resources/Public/Css/hio_typo3_connector.css
+++ b/Resources/Public/Css/hio_typo3_connector.css
@@ -1142,10 +1142,6 @@ select {
   padding-right: 2.5rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
 .pr-3 {
   padding-right: 0.75rem;
 }
